--- a/tpl/initialCode.html
+++ b/tpl/initialCode.html
@@ -4,11 +4,8 @@
     <pre><code>
       $scope.run = function() {
         $scope.getData('/static/dummy.json');
-        $scope.getData('/static/dummy.json');
-        $scope.getData('/static/dummy.json');
-        $scope.getData('/static/dummy.json');
-        $scope.getData('/static/dummy.json');
-        $scope.getData('/static/dummy.json');
+        $scope.getData('/static/dummy1.json');
+        $scope.getData('/static/dummy2.json');
       };
     </code></pre>
   </div>
