Changes tab description

--- a/tpl/ngIf.html
+++ b/tpl/ngIf.html
@@ -6,11 +6,11 @@
   </div>
   <div class="col-xs-6 col-md-4">
     <p>
-      El uso del cache evita que se repitan llamadas incluso después de refrescar la página.
+      Normalmente para mostrar elementos o no dependiendo de alguna condición solemos usar ngShow.
     </p>
+      Existe otra posibilidad, quizás menos conocida, pero que internamente tiene algo más de
+      rendimiento: ngIf.
     <p>
-      Sin embargo, hay que ser cuidadoso, no sea que cacheemos llamadas a backend que no procedan,
-      como puede ser el caso de peticiones cuya respuesta dependa del usuario logueado.
     </p>
   </div>
 </div>
