--- a/tpl/timeout.html
+++ b/tpl/timeout.html
@@ -13,10 +13,12 @@
   </div>
   <div class="col-xs-6 col-md-4">
     <p>
-      Esta es la versión de código base, sobre la que aplicaremos las diferentes modificaciones.
+      Aunque no es estrictamente una función que nos haga mejorar el rendimiento, sí que ayuda a
+      mejorar la experiencia de usuario (Recordad, Gin&UX!!).
     </p>
     <p>
-      Como podemos observar, no es más que un conjunto de llamadas a un servicio rest.
+      En nuestro caso, lo hemos notado y usado para mejorar la sensación a la hora de mostrar
+      textos traducidos.
     </p>
   </div>
 </div>
