--- a/tpl/promises.html
+++ b/tpl/promises.html
@@ -17,11 +17,11 @@
   </div>
   <div class="col-xs-6 col-md-4">
     <p>
-      El uso del cache evita que se repitan llamadas incluso después de refrescar la página.
+      Promesas... sí, como en la vida real. Una función puede devolver una promesa, de modo que
+      podemos hacer que cierto código sólo se ejecute tengamos los datos que devuelve esta función.
     </p>
     <p>
-      Sin embargo, hay que ser cuidadoso, no sea que cacheemos llamadas a backend que no procedan,
-      como puede ser el caso de peticiones cuya respuesta dependa del usuario logueado.
+      Es algo muy útil y básico cuando trabajamos contra un backend, ;)
     </p>
   </div>
 </div>
